--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,17 @@ body{
 header{
     display: flex;
     background-color: #2f2a2d;
-    justify-content: center;
+    justify-content: space-between;
     color: #fafafa;
-    padding: 60px 80px;
+    padding: 30px 80px;
 }
 button{
     outline: none;
+}
+.logo{
+
+    text-transform: uppercase;
+    font-weight: bold;
 }
 .btn-cart{
     background-color: #fafafa;
@@ -29,9 +34,12 @@ button{
     align-self: center;
 }
 .products{
-    display: flex;
+    column-gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 200px);
+    grid-template-rows: 1fr;
+    padding: 40px 80px;
     justify-content: space-between;
-    padding: 50px 100px;
 }
 p {
     margin: 0 0 5px 0;
@@ -39,15 +47,14 @@ p {
 .product-item{
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 200px;
+    border-radius: 5px;
     overflow: hidden;
     margin: 20px 0;
 }
 img {
     max-width: 100%;
-    height: auto;
-    border-radius: 20px;
+    height: auto
 }
 .desc {
     border: 1px solid #c0c0c040;
