--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,12 @@ button:focus{
 .btn-cart, .logo{
     align-self: center;
 }
+/*.products {*/
+/*display: flex;*/
+/*justify-content: space-between;*/
+/*flex-wrap: wrap;*/
+/*padding: 40px 80px;*/
+/*}*/
 .products{
     column-gap: 30px;
     display: grid;
@@ -93,7 +99,7 @@ img {
 }
 
 .buy-btn, .del-btn{
-    /* margin-top: 5px; */
+    margin-top: 5px;
     background-color: #2f2a2d;
     padding: 5px 15px;
     border: 1px solid transparent;
@@ -164,41 +170,29 @@ img {
     border: none;
     border-bottom: 2px solid #fafafa;
 }
-.error{
-    position: fixed;
+.error-msg {
+    padding: 30px 20px;
+    background-color: red;
+    color: white;
+    position: relative;
+}
+.error-block {
+    background-color: rgba(0,0,0, .5);
+    justify-content: center;
+    display: flex;
+    position: absolute;
     top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    overflow: hidden;
-    overflow-y: auto;
-    /* -webkit-overflow-scrolling: touch; */
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center; /* см. ниже */
+    width: 100%;
+    height: 100%;
     align-items: center;
-    z-index: 99;
-    padding:30px 0;
-    background:rgba(0, 0, 0, 0.7);
 }
-.error__window {
-    background: #fff;
-    
-    display: flex;
-
-    padding: 10px;
-    max-width: 100%;
-    border-radius: 10px;
-
-}
-.error__window p{
-    color: red;
-    margin: 0;
-    margin-right: 10px;
-
-    display: flex;
-    align-items: center;  
-}
-.active {
-    display: none;
+.close-btn {
+    font-size: 1.5em;
+    top: -40px;
+    position: absolute;
+    right: 0;
+    background: none;
+    border: none;
+    color: white;
+    font-weight: bold;
 }
